--- a/gptel-0.9.7/README.org
+++ b/gptel-0.9.7/README.org
@@ -8,24 +8,26 @@ gptel is a simple Large Language Model chat client for Emacs, with support for m
 | LLM Backend        | Supports | Requires                   |
 |--------------------+----------+----------------------------|
 | ChatGPT            | ✓        | [[https://platform.openai.com/account/api-keys][API key]]                    |
-| Azure              | ✓        | Deployment and API key     |
-| Ollama             | ✓        | [[https://ollama.ai/][Ollama running locally]]     |
-| GPT4All            | ✓        | [[https://gpt4all.io/index.html][GPT4All running locally]]    |
+| Anthropic (Claude) | ✓        | [[https://www.anthropic.com/api][API key]]                    |
 | Gemini             | ✓        | [[https://makersuite.google.com/app/apikey][API key]]                    |
+| Ollama             | ✓        | [[https://ollama.ai/][Ollama running locally]]     |
 | Llama.cpp          | ✓        | [[https://github.com/ggerganov/llama.cpp/tree/master/examples/server#quick-start][Llama.cpp running locally]]  |
 | Llamafile          | ✓        | [[https://github.com/Mozilla-Ocho/llamafile#quickstart][Local Llamafile server]]     |
+| GPT4All            | ✓        | [[https://gpt4all.io/index.html][GPT4All running locally]]    |
 | Kagi FastGPT       | ✓        | [[https://kagi.com/settings?p=api][API key]]                    |
 | Kagi Summarizer    | ✓        | [[https://kagi.com/settings?p=api][API key]]                    |
+| Azure              | ✓        | Deployment and API key     |
+| Groq               | ✓        | [[https://console.groq.com/keys][API key]]                    |
+| Perplexity         | ✓        | [[https://docs.perplexity.ai/docs/getting-started][API key]]                    |
+| OpenRouter         | ✓        | [[https://openrouter.ai/keys][API key]]                    |
 | together.ai        | ✓        | [[https://api.together.xyz/settings/api-keys][API key]]                    |
 | Anyscale           | ✓        | [[https://docs.endpoints.anyscale.com/][API key]]                    |
-| Perplexity         | ✓        | [[https://docs.perplexity.ai/docs/getting-started][API key]]                    |
-| Anthropic (Claude) | ✓        | [[https://www.anthropic.com/api][API key]]                    |
-| Groq               | ✓        | [[https://console.groq.com/keys][API key]]                    |
-| OpenRouter         | ✓        | [[https://openrouter.ai/keys][API key]]                    |
 | PrivateGPT         | ✓        | [[https://github.com/zylon-ai/private-gpt#-documentation][PrivateGPT running locally]] |
 | DeepSeek           | ✓        | [[https://platform.deepseek.com/api_keys][API key]]                    |
 | Cerebras           | ✓        | [[https://cloud.cerebras.ai/][API key]]                    |
 | Github Models      | ✓        | [[https://github.com/settings/tokens][Token]]                      |
+| Novita AI          | ✓        | [[https://novita.ai/model-api/product/llm-api?utm_source=github_gptel&utm_medium=github_readme&utm_campaign=link][Token]]                      |
+| xAI                | ✓        | [[https://console.x.ai?utm_source=github_gptel&utm_medium=github_readme&utm_campaign=link][API key]]                    |
 #+html: </div>
 
 *General usage*: ([[https://www.youtube.com/watch?v=bsRnh_brggM][YouTube Demo]])
@@ -34,9 +36,17 @@ https://user-images.githubusercontent.com/8607532/230516812-86510a09-a2fb-4cbd-b
 
 https://user-images.githubusercontent.com/8607532/230516816-ae4a613a-4d01-4073-ad3f-b66fa73c6e45.mp4
 
+*In-place usage*
+
+#+html: <p align="center">
+https://github.com/user-attachments/assets/cec11aec-52f6-412e-9e7a-9358e8b9b1bf
+#+html: </p>
+
 *Media support*
 
+#+html: <p align="center">
 https://github.com/user-attachments/assets/1fd947e1-226b-4be2-bc68-7b22b2e3215f
+#+html: </p>
 
 *Multi-LLM support demo*:
 
@@ -45,8 +55,8 @@ https://github-production-user-asset-6210df.s3.amazonaws.com/8607532/278854024-a
 - It's async and fast, streams responses.
 - Interact with LLMs from anywhere in Emacs (any buffer, shell, minibuffer, wherever)
 - LLM responses are in Markdown or Org markup.
-- Supports conversations and multiple independent sessions.
-- Supports multi-modal models (send images, documents)
+- Supports multiple independent conversations and one-off ad hoc interactions.
+- Supports multi-modal models (include images, documents)
 - Save chats as regular Markdown/Org/Text files and resume them later.
 - You can go back and edit your previous prompts or LLM responses when continuing a conversation. These will be fed back to the model.
 - Don't like gptel's workflow? Use it to create your own for any supported model/backend with a [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][simple API]].
@@ -79,20 +89,25 @@ gptel uses Curl if available, but falls back to url-retrieve to work without ext
       - [[#deepseek][DeepSeek]]
       - [[#cerebras][Cerebras]]
       - [[#github-models][Github Models]]
+      - [[#novita-ai][Novita AI]]
+      - [[#xai][xAI]]
   - [[#usage][Usage]]
     - [[#in-any-buffer][In any buffer:]]
     - [[#in-a-dedicated-chat-buffer][In a dedicated chat buffer:]]
       - [[#including-media-images-documents-with-requests][Including media (images, documents) with requests]]
       - [[#save-and-restore-your-chat-sessions][Save and restore your chat sessions]]
+    - [[#setting-options-backend-model-request-parameters-system-prompts-and-more][Setting options (backend, model, request parameters, system prompts and more)]]
     - [[#include-more-context-with-requests][Include more context with requests]]
     - [[#rewrite-refactor-or-fill-in-a-region][Rewrite, refactor or fill in a region]]
     - [[#extra-org-mode-conveniences][Extra Org mode conveniences]]
   - [[#faq][FAQ]]
+      - [[#i-want-to-use-gptel-in-a-way-thats-not-supported-by-gptel-send-or-the-options-menu][I want to use gptel in a way that's not supported by =gptel-send= or the options menu]]
       - [[#i-want-the-window-to-scroll-automatically-as-the-response-is-inserted][I want the window to scroll automatically as the response is inserted]]
       - [[#i-want-the-cursor-to-move-to-the-next-prompt-after-the-response-is-inserted][I want the cursor to move to the next prompt after the response is inserted]]
       - [[#i-want-to-change-the-formatting-of-the-prompt-and-llm-response][I want to change the formatting of the prompt and LLM response]]
       - [[#i-want-the-transient-menu-options-to-be-saved-so-i-only-need-to-set-them-once][I want the transient menu options to be saved so I only need to set them once]]
-      - [[#i-want-to-use-gptel-in-a-way-thats-not-supported-by-gptel-send-or-the-options-menu][I want to use gptel in a way that's not supported by =gptel-send= or the options menu]]
+      - [[#can-i-change-the-transient-menu-key-bindings][Can I change the transient menu key bindings?]]
+      - [[#how-does-gptel-distinguish-between-user-prompts-and-llm-responses][How does gptel distinguish between user prompts and LLM responses?]]
       - [[#doom-emacs-sending-a-query-from-the-gptel-menu-fails-because-of-a-key-conflict-with-org-mode][(Doom Emacs) Sending a query from the gptel menu fails because of a key conflict with Org mode]]
       - [[#chatgpt-i-get-the-error-http2-429-you-exceeded-your-current-quota][(ChatGPT) I get the error "(HTTP/2 429) You exceeded your current quota"]]
       - [[#why-another-llm-client][Why another LLM client?]]
@@ -103,13 +118,13 @@ gptel uses Curl if available, but falls back to url-retrieve to work without ext
 
 ** Breaking changes!
 
-- The =gptel-model= is now expected to be a symbol, not a string.  Please update your configuration.
+- =gptel-model= is now expected to be a symbol, not a string.  Please update your configuration.
 
 ** Installation
 
-gptel can be installed in Emacs out of the box with =M-x package-install= ⏎ =gptel=.  This installs the latest release.
+gptel can be installed in Emacs out of the box with =M-x package-install= ⏎ =gptel=.  This installs the latest commit.
 
-If you want the development version instead, add MELPA (or NonGNU-devel ELPA) to your list of sources, then install it with =M-x package-install⏎= =gptel=.
+If you want the stable version instead, add NonGNU-devel ELPA or MELPA-stable to your list of package sources (=package-archives=), then install gptel with =M-x package-install⏎= =gptel= from these sources.
 
 (Optional: Install =markdown-mode=.)
 
@@ -726,38 +741,116 @@ The above code makes the backend available to select.  If you want it to be the 
 #+end_src
 
 #+html: </details>
+#+html: <details><summary>
+**** Novita AI
+#+html: </summary>
+
+Register a backend with
+#+begin_src emacs-lisp
+;; Novita AI offers an OpenAI compatible API
+(gptel-make-openai "NovitaAI"         ;Any name you want
+  :host "api.novita.ai"
+  :endpoint "/v3/openai"
+  :key "your-api-key"                   ;can be a function that returns the key
+  :stream t
+  :models '(;; has many more, check https://novita.ai/llm-api
+            gryphe/mythomax-l2-13b
+            meta-llama/llama-3-70b-instruct
+            meta-llama/llama-3.1-70b-instruct))
+#+end_src
+
+You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
+
+***** (Optional) Set as the default gptel backend
+
+The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
+#+begin_src emacs-lisp
+;; OPTIONAL configuration
+(setq
+ gptel-model   'gryphe/mythomax-l2-13b
+ gptel-backend
+ (gptel-make-openai "NovitaAI"         
+   :host "api.novita.ai"
+   :endpoint "/v3/openai"
+   :key "your-api-key"                   
+   :stream t
+   :models '(;; has many more, check https://novita.ai/llm-api
+             mistralai/Mixtral-8x7B-Instruct-v0.1
+             meta-llama/llama-3-70b-instruct
+             meta-llama/llama-3.1-70b-instruct)))
+#+end_src
+
+#+html: </details>
+
+#+html: <details><summary>
+**** xAI
+#+html: </summary>
+
+Register a backend with
+#+begin_src emacs-lisp
+;; xAI offers an OpenAI compatible API
+(gptel-make-openai "xAI"           ;Any name you want
+  :host "api.x.ai"
+  :key "your-api-key"              ;can be a function that returns the key
+  :endpoint "/v1/chat/completions"
+  :stream t
+  :models '(;; xAI now only offers `grok-beta` as of the time of this writing
+            grok-beta))
+#+end_src
+
+You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
+
+***** (Optional) Set as the default gptel backend
+
+The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
+#+begin_src emacs-lisp
+;; OPTIONAL configuration
+(setq
+ gptel-model   'grok-beta
+ gptel-backend
+ (gptel-make-openai "xAI"           ;Any name you want
+   :host "api.x.ai"
+   :key "your-api-key"              ;can be a function that returns the key
+   :endpoint "/v1/chat/completions"
+   :stream t
+   :models '(;; xAI now only offers `grok-beta` as of the time of this writing
+             grok-beta)))
+#+end_src
+
+#+html: </details>
 
 ** Usage
 
-(This is also a [[https://www.youtube.com/watch?v=bsRnh_brggM][video demo]] showing various uses of gptel.)
+gptel provides a few powerful, general purpose and flexible commands.  You can dynamically tweak their behavior to the needs of your task with /directives/, redirection options and more.  There is a [[https://www.youtube.com/watch?v=bsRnh_brggM][video demo]] showing various uses of gptel -- but =gptel-send= might be all you need.
 
-|-------------------+------------------------------------------------------------------------------------------------|
-| *To send queries* | Description                                                                                    |
-|-------------------+------------------------------------------------------------------------------------------------|
-| =gptel-send=      | Send conversation up to =(point)=, or selection if region is active.  Works anywhere in Emacs. |
-| =gptel=           | Create a new dedicated chat buffer.  Not required to use gptel.                                |
-|-------------------+------------------------------------------------------------------------------------------------|
+|-------------------+---------------------------------------------------------------------------------------------------|
+| *To send queries* | Description                                                                                       |
+|-------------------+---------------------------------------------------------------------------------------------------|
+| =gptel-send=      | Send all text up to =(point)=, or the selection if region is active.  Works anywhere in Emacs.    |
+| =gptel=           | Create a new dedicated chat buffer.  Not required to use gptel.                                   |
+| =gptel-rewrite=   | Rewrite, refactor or change the selected region.  Can diff/ediff changes before merging/applying. |
+|-------------------+---------------------------------------------------------------------------------------------------|
 
-|--------------------+---------------------------------------------------------------|
-| *To Set options*   |                                                               |
-|--------------------+---------------------------------------------------------------|
-| =C-u= =gptel-send= | Transient menu for preferences, input/output redirection etc. |
-| =gptel-menu=       | /(Same)/                                                      |
-|--------------------+---------------------------------------------------------------|
+|---------------------+---------------------------------------------------------------|
+| *To tweak behavior* |                                                               |
+|---------------------+---------------------------------------------------------------|
+| =C-u= =gptel-send=  | Transient menu for preferences, input/output redirection etc. |
+| =gptel-menu=        | /(Same)/                                                      |
+|---------------------+---------------------------------------------------------------|
 
-|------------------+-----------------------------------------------------------------------------------------|
-| *To add context* |                                                                                         |
-|------------------+-----------------------------------------------------------------------------------------|
-| =gptel-add=      | Add/remove a region or buffer to gptel's context.  In Dired, add/remove marked files.   |
-| =gptel-add-file= | Add a (text-readable) file to gptel's context.  Also available from the transient menu. |
-|------------------+-----------------------------------------------------------------------------------------|
+|------------------+--------------------------------------------------------------------------------------------------------|
+| *To add context* |                                                                                                        |
+|------------------+--------------------------------------------------------------------------------------------------------|
+| =gptel-add=      | Add/remove a region or buffer to gptel's context.  In Dired, add/remove marked files.                  |
+| =gptel-add-file= | Add a file (text or supported media type) to gptel's context.  Also available from the transient menu. |
+|------------------+--------------------------------------------------------------------------------------------------------|
 
-|----------------------------+----------------------------------------------------------------------------|
-| *In Org mode only*         |                                                                            |
-|----------------------------+----------------------------------------------------------------------------|
-| =gptel-org-set-topic=      | Limit conversation context to an Org heading                               |
-| =gptel-org-set-properties= | Write gptel configuration as Org properties (for self-contained chat logs) |
-|----------------------------+----------------------------------------------------------------------------|
+|----------------------------+-----------------------------------------------------------------------------------------|
+| *Org mode bonuses*         |                                                                                         |
+|----------------------------+-----------------------------------------------------------------------------------------|
+| =gptel-org-set-topic=      | Limit conversation context to an Org heading.  (For branching conversations see below.) |
+| =gptel-org-set-properties= | Write gptel configuration as Org properties, for per-heading chat configuration.        |
+|----------------------------+-----------------------------------------------------------------------------------------|
 
 *** In any buffer:
 
@@ -766,7 +859,7 @@ The above code makes the backend available to select.  If you want it to be the 
 2. If a region is selected, the conversation will be limited to its contents.
 
 3. Call =M-x gptel-send= with a prefix argument (~C-u~)
-   - to set chat parameters (GPT model, system message etc) for this buffer,
+   - to set chat parameters (GPT model, backend, system message etc) for this buffer,
    - include quick instructions for the next request only,
    - to add additional context -- regions, buffers or files -- to gptel,
    - to read the prompt from or redirect the response elsewhere,
@@ -775,6 +868,8 @@ The above code makes the backend available to select.  If you want it to be the 
 #+html: <img src="https://github.com/karthink/gptel/assets/8607532/3562a6e2-7a5c-4f7e-8e57-bf3c11589c73" align="center" alt="Image showing gptel's menu with some of the available query options.">
 
 *** In a dedicated chat buffer:
+
+*Note*: gptel works anywhere in Emacs.  The dedicated chat buffer only adds some conveniences.
 
 1. Run =M-x gptel= to start or switch to the chat buffer. It will ask you for the key if you skipped the previous step. Run it with a prefix-arg (=C-u M-x gptel=) to start a new session.
 
@@ -870,6 +965,13 @@ Similar criteria apply to Markdown chat buffers.
 Saving the file will save the state of the conversation as well.  To resume the chat, open the file and turn on =gptel-mode= before editing the buffer.
 
 #+html: </details>
+*** Setting options (backend, model, request parameters, system prompts and more)
+
+Most gptel options can be set from gptel's transient menu, available by calling =gptel-send= with a prefix-argument, or via =gptel-menu=.  To change their default values in your configuration, see [[*Additional Configuration]].  Chat buffer-specific options are also available via the header-line in chat buffers.
+
+# TODO Remove this when writing the manual.
+Selecting a model and backend can be done interactively via the =-m= command of =gptel-menu=.  Available registered models are prefixed by the name of their backend with a string like =ChatGPT:gpt-4o-mini=, where =ChatGPT= is the backend name you used to register it and =gpt-4o-mini= is the name of the model.
+
 *** Include more context with requests
 
 By default, gptel will query the LLM with the active region or the buffer contents up to the cursor.  Often it can be helpful to provide the LLM with additional context from outside the current buffer. For example, when you're in a chat buffer but want to ask questions about a (possibly changing) code buffer and auxiliary project files.
@@ -886,40 +988,62 @@ And then browse through or remove context from the context buffer:
 
 *** Rewrite, refactor or fill in a region
 
-In any buffer: with a region selected, you can rewrite prose or refactor code from here:
+In any buffer: with a region selected, you can modify text, rewrite prose or refactor code with =gptel-rewrite=.  Example with prose:
 
-*Prose*:
+#+html: <p align="center">
+https://github.com/user-attachments/assets/e3b436b3-9bde-4c1f-b2ce-3f7df1984933
+#+html: </p>
 
-#+html: <img src="https://github.com/user-attachments/assets/172e75cd-11e9-4f3b-9ab9-b4edfb8f6695" align="center" />
+The result is previewed over the original text.  By default, the buffer is not modified.
 
-# [[https://user-images.githubusercontent.com/8607532/230770352-ee6f45a3-a083-4cf0-b13c-619f7710e9ba.png]]
+Pressing =RET= or clicking in the rewritten region should give you a list of options: you can *diff*, *ediff*, *merge* or *accept* the replacement.  Example with code:
 
-*Code*:
+#+html: <p align="center">
+https://github.com/user-attachments/assets/4067fdb8-85d3-4264-9b64-d727353f68f9
+#+html: </p>
 
-#+html: <img src="https://github.com/user-attachments/assets/8670ddb3-8655-47f4-a70c-8994994e61e3" align="center" />
+*Acting on the LLM response*:
 
-# [[https://user-images.githubusercontent.com/8607532/230770162-1a5a496c-ee57-4a67-9c95-d45f238544ae.png]]
+If you would like one of these things to happen automatically, you can customize =gptel-rewrite-default-action=.
 
-When the refactor is ready, you can apply it or compare against the original:
+These options are also available from =gptel-rewrite=:
 
-#+html: <img src="https://github.com/user-attachments/assets/a0cf33b2-3ad3-4f55-aa7b-4349e54d6771" align="center" />
+#+html: <img src="https://github.com/user-attachments/assets/589785b9-aa3f-414a-98dd-d26b7509de08" align="center" />
 
-These actions are also available directly when the cursor is inside the pending rewrite region:
+And you can call them directly when the cursor is in the rewritten region:
 
-#+html: <img src="https://github.com/user-attachments/assets/57e1fff7-f8e4-47f0-9bda-d0b698443559" align="center" />
+#+html: <img src="https://github.com/user-attachments/assets/f5b3ca47-e146-45fe-8584-f11035fa4dbc" align="center" />
 
 *** Extra Org mode conveniences
 
 gptel offers a few extra conveniences in Org mode.
 
-- You can limit the conversation context to an Org heading with the command =gptel-org-set-topic=.
+***** Limit conversation context to an Org heading
+
+You can limit the conversation context to an Org heading with the command =gptel-org-set-topic=.
+
+(This sets an Org property (=GPTEL_TOPIC=) under the heading.  You can also add this property manually instead.)
   
-- You can have branching conversations in Org mode, where each hierarchical outline path through the document is a separate conversation branch.  This is also useful for limiting the context size of each query.  See the variable =gptel-org-branching-context=.
-  Note: using this option requires Org 9.6.7 or higher to be available.  The [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]] package uses gptel to provide this branching conversation behavior for older versions of Org.
+***** Use branching context in Org mode (tree of conversations)
+
+You can have branching conversations in Org mode, where each hierarchical outline path through the document is a separate conversation branch.  This is also useful for limiting the context size of each query.  See the variable =gptel-org-branching-context=.
+
+Note: using this option requires Org 9.6.7 or higher to be available.  The [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]] package uses gptel to provide this branching conversation behavior for older versions of Org.
   
-- You can declare the gptel model, backend, temperature, system message and other parameters as Org properties with the command =gptel-org-set-properties=.  gptel queries under the corresponding heading will always use these settings, allowing you to create mostly reproducible LLM chat notebooks, and to have simultaneous chats with different models, model settings and directives under different Org headings.
+***** Save gptel parameters to Org headings (reproducible chats)
+
+You can declare the gptel model, backend, temperature, system message and other parameters as Org properties with the command =gptel-org-set-properties=.  gptel queries under the corresponding heading will always use these settings, allowing you to create mostly reproducible LLM chat notebooks, and to have simultaneous chats with different models, model settings and directives under different Org headings.
 
 ** FAQ
+#+html: <details><summary>
+**** I want to use gptel in a way that's not supported by =gptel-send= or the options menu
+#+html: </summary>
+
+gptel's default usage pattern is simple, and will stay this way: Read input in any buffer and insert the response below it.  Some custom behavior is possible with the transient menu (=C-u M-x gptel-send=).
+
+For more programmable usage, gptel provides a general =gptel-request= function that accepts a custom prompt and a callback to act on the response. You can use this to build custom workflows not supported by =gptel-send=.  See the documentation of =gptel-request=, and the [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][wiki]] for examples.
+
+#+html: </details>
 #+html: <details><summary>
 **** I want the window to scroll automatically as the response is inserted
 #+html: </summary>
@@ -979,12 +1103,21 @@ Or see this [[https://github.com/karthink/gptel/wiki/Commonly-requested-features
 
 #+html: </details>
 #+html: <details><summary>
-**** I want to use gptel in a way that's not supported by =gptel-send= or the options menu
+**** Can I change the transient menu key bindings?
+
+Yes, see =transient-suffix-put=.  This changes the key to select a backend/model from "-m" to "M" in gptel's menu:
+#+begin_src emacs-lisp
+(transient-suffix-put 'gptel-menu (kbd "-m") :key "M")
+#+end_src
+
+**** How does gptel distinguish between user prompts and LLM responses?
 #+html: </summary>
 
-gptel's default usage pattern is simple, and will stay this way: Read input in any buffer and insert the response below it.  Some custom behavior is possible with the transient menu (=C-u M-x gptel-send=).
+gptel uses [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Text-Properties.html][text-properties]] to watermark LLM responses.  Thus this text is interpreted as a response even if you copy it into another buffer.  In regular buffers (buffers without =gptel-mode= enabled), you can turn off this tracking by unsetting =gptel-track-responses=.
 
-For more programmable usage, gptel provides a general =gptel-request= function that accepts a custom prompt and a callback to act on the response. You can use this to build custom workflows not supported by =gptel-send=.  See the documentation of =gptel-request=, and the [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][wiki]] for examples.
+When restoring a chat state from a file on disk, gptel will apply these properties from saved metadata in the file when you turn on =gptel-mode=.
+
+gptel does /not/ use any prefix or semantic/syntax element in the buffer (such as headings) to separate prompts and responses.  The reason for this is that gptel aims to integrate as seamlessly as possible into your regular Emacs usage: LLM interaction is not the objective, it's just another tool at your disposal.  So requiring a bunch of "user" and "assistant" tags in the buffer is noisy and restrictive. If you want these demarcations, you can customize =gptel-prompt-prefix-alist= and =gptel-response-prefix-alist=.  Note that these prefixes are for your readability only and purely cosmetic.
 
 #+html: </details>
 #+html: <details><summary>
@@ -1022,11 +1155,12 @@ Other Emacs clients for LLMs prescribe the format of the interaction (a comint s
 2. Integration with org-mode, not using a walled-off org-babel block, but as regular text.  This way the model can generate code blocks that I can run.
 
 #+html: </details>
-
+#+html: <details><summary>
 ** Additional Configuration
 :PROPERTIES:
 :ID:       f885adac-58a3-4eba-a6b7-91e9e7a17829
 :END:
+#+html: </summary>
 
 #+begin_src emacs-lisp :exports none :results list
 (let ((all))
@@ -1057,17 +1191,17 @@ Other Emacs clients for LLMs prescribe the format of the interaction (a comint s
 | =gptel-use-context=   | How/whether to include additional context               |
 |-----------------------+---------------------------------------------------------|
 
-|-------------------------------+----------------------------------------------------------------|
-| *Chat UI options*             |                                                                |
-|-------------------------------+----------------------------------------------------------------|
-| =gptel-default-mode=          | Major mode for dedicated chat buffers.                         |
-| =gptel-track-response=        | Distinguish between user messages and LLM responses?           |
-| =gptel-track-media=           | Send images or other media from links?                         |
-| =gptel-prompt-prefix-alist=   | Text inserted before queries.                                  |
-| =gptel-response-prefix-alist= | Text inserted before responses.                                |
-| =gptel-use-header-line=       | Display status messages in header-line (default) or minibuffer |
-| =gptel-display-buffer-action= | Placement of the gptel chat buffer.                            |
-|-------------------------------+----------------------------------------------------------------|
+|--------------------------------+----------------------------------------------------------------|
+| *Chat UI options*              |                                                                |
+|--------------------------------+----------------------------------------------------------------|
+| =gptel-default-mode=           | Major mode for dedicated chat buffers.                         |
+| =gptel-track-response=         | Distinguish between user messages and LLM responses?           |
+| =gptel-track-media=            | Send images or other media from links?                         |
+| =gptel-prompt-prefix-alist=    | Text inserted before queries.                                  |
+| =gptel-response-prefix-alist=  | Text inserted before responses.                                |
+| =gptel-use-header-line=        | Display status messages in header-line (default) or minibuffer |
+| =gptel-display-buffer-action=  | Placement of the gptel chat buffer.                            |
+|--------------------------------+----------------------------------------------------------------|
 
 |-------------------------------+-------------------------------------------------------|
 | *Org mode UI options*         |                                                       |
@@ -1075,14 +1209,18 @@ Other Emacs clients for LLMs prescribe the format of the interaction (a comint s
 | =gptel-org-branching-context= | Make each outline path a separate conversation branch |
 |-------------------------------+-------------------------------------------------------|
 
-|---------------------------------+------------------------------------------------------------|
-| *Hooks for customization*       |                                                            |
-|---------------------------------+------------------------------------------------------------|
-| =gptel-pre-response-hook=       | Runs before inserting the LLM response into the buffer     |
-| =gptel-post-response-functions= | Runs after inserting the full LLM response into the buffer |
-| =gptel-post-stream-hook=        | Runs after each streaming insertion                        |
-| =gptel-context-wrap-function=   | To include additional context formatted your way           |
-|---------------------------------+------------------------------------------------------------|
+|---------------------------------+-------------------------------------------------------------|
+| *Hooks for customization*       |                                                             |
+|---------------------------------+-------------------------------------------------------------|
+| =gptel-save-state-hook=         | Runs before saving the chat state to a file on disk         |
+| =gptel-pre-response-hook=       | Runs before inserting the LLM response into the buffer      |
+| =gptel-post-response-functions= | Runs after inserting the full LLM response into the buffer  |
+| =gptel-post-stream-hook=        | Runs after each streaming insertion                         |
+| =gptel-context-wrap-function=   | To include additional context formatted your way            |
+| =gptel-rewrite-default-action=  | Automatically diff, ediff, merge or replace refactored text |
+|---------------------------------+-------------------------------------------------------------|
+
+#+html: </details>
 
 ** COMMENT Will you add feature X?
 
@@ -1112,7 +1250,7 @@ Other Emacs clients for LLMs include
 - [[https://github.com/xenodium/chatgpt-shell][chatgpt-shell]]: comint-shell based interaction with ChatGPT.  Also supports DALL-E, executable code blocks in the responses, and more.
 - [[https://github.com/rksm/org-ai][org-ai]]: Interaction through special =#+begin_ai ... #+end_ai= Org-mode blocks.  Also supports DALL-E, querying ChatGPT with the contents of project files, and more.
 
-There are several more: [[https://github.com/CarlQLange/chatgpt-arcana.el][chatgpt-arcana]], [[https://github.com/MichaelBurge/leafy-mode][leafy-mode]], [[https://github.com/iwahbe/chat.el][chat.el]]
+There are several more: [[https://github.com/MichaelBurge/leafy-mode][leafy-mode]], [[https://github.com/iwahbe/chat.el][chat.el]], [[https://github.com/stuhlmueller/gpt.el][gpt.el]],  [[https://github.com/AnselmC/le-gpt.el][le-gpt]], [[https://github.com/stevemolitor/robby][robby]].
 
 *** Packages using gptel
 
@@ -1126,6 +1264,7 @@ gptel is a general-purpose package for chat and ad-hoc LLM interaction.  The fol
 - [[https://github.com/douo/magit-gptcommit][magit-gptcommit]]: Generate Commit Messages within magit-status Buffer using gptel
 - [[https://github.com/armindarvish/consult-omni][consult-omni]]: Versatile multi-source search package.  It includes gptel as one of its many sources.
 - [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]]: Provides branching conversations in Org buffers using gptel.  (Note that gptel includes this feature as well (see =gptel-org-branching-context=), but requires a recent version of Org mode (9.67 or later) to be installed.)
+- [[https://github.com/rob137/Corsair][Corsair]]: Helps gather text to populate LLM prompts for gptel.
 
 ** COMMENT Older Breaking Changes
 
@@ -1139,6 +1278,7 @@ gptel is a general-purpose package for chat and ad-hoc LLM interaction.  The fol
 
 ** Acknowledgments
 
+- [[https://github.com/meain][Abin Simon]] for extensive feedback on improving gptel's directives and UI.
 - [[https://github.com/algal][Alexis Gallagher]] and [[https://github.com/d1egoaz][Diego Alvarez]] for fixing a nasty multi-byte bug with =url-retrieve=.
 - [[https://github.com/tarsius][Jonas Bernoulli]] for the Transient library.
 - [[https://github.com/daedsidog][daedsidog]] for adding context support to gptel.
